UI2: added styles to UI2 components and resized text to ensure: 1) control bars never overlapped text they overlaid 2) title fields are larger for longer titles 3) page select menu smaller

--- a/images/SegueCommon.css
+++ b/images/SegueCommon.css
@@ -163,7 +163,6 @@
  		text-align: right;
 	}
 	
-	
 	.ui2_field {
 		font-size: 11px;
 		border: 1px solid #666666;
@@ -172,6 +171,22 @@
 	.ui2_text {
 		font-size: 11px;
 		font-weight: normal;
+	}
+
+	.ui2_title_field_page {
+		font-size: 10px;
+		font-weight: normal;
+	}
+	
+	.ui2_page_select {
+		font-size: 9px;
+		font-weight: normal;		
+	}
+
+	.ui2_title_field_content {
+		font-size: 10px;
+		font-weight: normal;
+		width: 200px;
 	}
 	
 	.ui2_text_smaller {
@@ -195,13 +210,15 @@
 		margin-bottom: 5px;
 		margin-right: 5px;
 	}
-	
+		
 	.controls_bar a {
 		color: #000;
 		text-decoration: none;
 	}
 	
 	.ui2_add_form_wrapper {
+		font-size: 10px;
+		font-weight: bold;
 		text-align: center;
 		white-space: nowrap;
 	}
@@ -219,17 +236,19 @@
 	}
 	
 	.controls_bar_title {
-		padding-right: 10px;
+		font-size: 10px;
+		text-align: left;
+		
 	}
 	
 	.selection_link {
-		margin-left: 5px;
-		margin-right: 3px;
+		font-size: 9px;
+
 	}
 	
 	.controls_link {
-		margin-left: 3px;
-		margin-right: 5px;
+		font-size: 9px;
+
 	}
 	
 /*********************************************************
